Sorting and Filtering
Sorting and filtering Europe's national teams for 2012

--- a/euro12.ipynb
+++ b/euro12.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
        "[2 rows x 35 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1726,7 +1726,7 @@
        "[16 rows x 32 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1744,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1753,26 +1753,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Shooting Accuracy</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Team</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>England</th>\n",
+       "      <td>50.0%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Italy</th>\n",
+       "      <td>43.0%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Russia</th>\n",
+       "      <td>22.5%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Team\n",
-       "England    50.0%\n",
-       "Italy      43.0%\n",
-       "Russia     22.5%\n",
-       "Name: Shooting Accuracy, dtype: object"
+       "        Shooting Accuracy\n",
+       "Team                     \n",
+       "England             50.0%\n",
+       "Italy               43.0%\n",
+       "Russia              22.5%"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "euro12.loc[['England','Italy','Russia'],'Shooting Accuracy']"
+    "euro12.loc[['England','Italy','Russia'],['Shooting Accuracy']]"
    ]
   }
  ],
